--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Feature</th>
                                 <th scope="col">SubFeature</th>
+                                <th scope="col">Result</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -30,101 +31,161 @@
                                     <th scope="row">1</th>
                                     <td><a href="signup.html" target="_blank">Sign Up</a></td>
                                     <td>-</td>
+                                    <td>
+                                        <button type="button" class="btn btn-success btn-sm">89%</button>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
                                     <td><a href="login.html" target="_blank">Login</a></td>
                                     <td>-</td>
+                                    <td>
+                                        <button type="button" class="btn btn-success btn-sm">82%</button>
+                                    </td>
                                 </tr>
                             <tr>
                                 <th scope="row">3</th>
                                 <td><a href="home.html" target="_blank">Home page</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">81%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">4</th>
                                 <td><a href="careerPlanner.html" target="_blank">Career Planner</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">78%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">5</th>
                                 <td><a href="learningplanner1.html" target="_blank">Learning planner</a></td>
                                 <td>popUp guide</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">68%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">6</th>
                                 <td><a href="learningplanner2.html" target="_blank">Learning planner</a></td>
                                 <td>Form page</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">73%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">7</th>
                                 <td><a href="courseSelection.html" target="_blank">Learning planner</a></td>
                                 <td>Course Selection</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">77%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">8</th>
                                 <td><a href="learningPlanner3.html" target="_blank">Learning planner </a></td>
                                 <td> Result & progress</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">65%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">9</th>
                                 <td><a href="marketplace.html" target="_blank">Market Place</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">61%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">10</th>
                                 <td><a href="collection.html" target="_blank">Collection</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">83%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">11</th>
                                 <td><a href="detailCourse.html" target="_blank">Detail Course</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">71%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">12</th>
                                 <td><a href="interactiveLearning.html" target="_blank">Interactive Learning</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">61%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">13</th>
                                 <td><a href="purchase.html" target="_blank">History transaction</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">69%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">14</th>
                                 <td><a href="cart.html" target="_blank">Cart</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">63%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">15</th>
                                 <td><a href="learning.html" target="_blank">Institute Learning</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">79%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">16</th>
                                 <td><a href="detailInstitutLearning.html" target="_blank">Institute Learning</a></td>
                                 <td>Detail institute learning</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">61%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">17</th>
                                 <td><a href="instituteLearning-UserManagement.html" target="_blank">Institute Learning</a></td>
                                 <td>User management</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">74%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">18</th>
                                 <td><a href="moduleLearningReport.html" target="_blank">Institute Learning</a></td>
                                 <td>Course Report</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">80%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">19</th>
                                 <td><a href="moduleLearning(student).html" target="_blank">Institute Learning</a></td>
                                 <td>Course Learning (student)</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">72%</button>
+                                </td>
                             </tr>
                             <tr>
                                 <th scope="row">19</th>
                                 <td><a href="account.html" target="_blank">Profile page</a></td>
                                 <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-sm">72%</button>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
