--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-8 mt-3 mx-5">
-                <h1>Report perofrmance ejourney with light house!</h1>
-                <h3>Student Site</h3>
+                <h3>Report perofrmance ejourney with light house!</h3>
+                <span class="badge rounded-pill bg-secondary">Secondary</span>
                 <div class="row ">
                     <div class="col mt-2">
                         <table class="table">
