report performance-update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-8 mt-3 mx-5">
                 <h3>Report perofrmance ejourney with light house!</h3>
-                <span class="badge rounded-pill bg-secondary">Secondary</span>
+                <span class="badge bg-success">Student site</span>
                 <div class="row ">
                     <div class="col mt-2">
                         <table class="table">
