--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                                 <tr>
                                     <th scope="row">1</th>
                                     <td>Production</td>
-                                    <td><a href="prod/index.html" target="_blank">Student</a></td>
+                                    <td><a href="prod/index.html" >Student</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
                                     <td>Staging</td>
-                                    <td><a href="staging/index.html" target="_blank">Student</a></td>
+                                    <td><a href="staging/index.html">Student</a></td>
                                 </tr>
                             
                             </tbody>
