--- a/staging/index.html
+++ b/staging/index.html
@@ -12,11 +12,23 @@
   </head>
   <body>
     <div class="container-fluid">
+        <div class="row mt-3">
+            <div class="col-8 mt-3 mx-5">
+                <a class="btn btn-danger btn-sm" href="/" role="button">Back</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-8 mt-3 mx-5">
                 <h3>Report perofrmance ejourney with light house!</h3>
-                <span class="badge bg-primary">Staging  </span>
-                <span class="badge bg-success">Student site</span>
+                <div class="row">
+                    <div class="col-2">
+                        <span class="badge bg-secondary">Staging</span>
+                    </div>
+                    <div class="col-2">
+                        <span class="badge bg-secondary">Student site</span>
+                    </div>
+                </div>
+                
                 <div class="row ">
                     <div class="col mt-2">
                         <table class="table">
@@ -64,7 +76,7 @@
                             <tr>
                                 <th scope="row">5</th>
                                 <td><a href="institutLearning.html" target="_blank">Institute Learning</a></td>
-                                <td>popUp guide</td>
+                                <td>-</td>
                                 <td>
                                     <button type="button" class="btn btn-success btn-sm">95%</button>
                                 </td>
@@ -72,7 +84,7 @@
                             <tr></tr>
                                 <th scope="row">6</th>
                                 <td><a href="purchase.html" target="_blank">Transaction</a></td>
-                                <td>popUp guide</td>
+                                <td>-</td>
                                 <td>
                                     <button type="button" class="btn btn-success btn-sm">98%</button>
                                 </td>
