--- a/prod/index.html
+++ b/prod/index.html
@@ -12,11 +12,24 @@
   </head>
   <body>
     <div class="container-fluid">
+        <div class="row mt-3"></div>
+            <div class="col-8 mt-3 mx-5">
+                <a class="btn btn-danger btn-sm" href="/" role="button">Back</a>
+            </div>
+        </div>
         <div class="row">
             <div class="col-8 mt-3 mx-5">
                 <h3>Report perofrmance ejourney with light house!</h3>
-                <span class="badge bg-success">Student site</span>
-                <div class="row ">
+                <div class="row">
+                    <div class="col-2">
+                        <span class="badge bg-secondary">Production</span>
+                    </div>
+                    <div class="col-2">
+                        <span class="badge bg-secondary">Student site</span>
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col mt-2">
                         <table class="table">
                             <thead>
