update report staging

--- a/prod/index.html
+++ b/prod/index.html
@@ -21,15 +21,12 @@
             <div class="col-8 mt-3 mx-5">
                 <h3>Report perofrmance ejourney with light house!</h3>
                 <div class="row">
-                    <div class="col-2">
-                        <span class="badge bg-secondary">Production</span>
-                    </div>
-                    <div class="col-2">
-                        <span class="badge bg-secondary">Student site</span>
+                    <div class="col-">
+                        <span class="badge bg-secondary">Production | Student site</span>
                     </div>
                 </div>
-
-                <div class="row">
+                
+                <div class="row ">
                     <div class="col mt-2">
                         <table class="table">
                             <thead>
@@ -164,7 +161,7 @@
                             <tr>
                                 <th scope="row">16</th>
                                 <td><a href="detailInstitutLearning.html" target="_blank">Institute Learning</a></td>
-                                <td>Detail institute learning</td>
+                                <td>Course Institute</td>
                                 <td>
                                     <button type="button" class="btn btn-danger btn-sm">61%</button>
                                 </td>
