--- a/staging/index.html
+++ b/staging/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="container-fluid">
-        <div class="row mt-3">
+        <div class="row mt-3"></div>
             <div class="col-8 mt-3 mx-5">
                 <a class="btn btn-danger btn-sm" href="/" role="button">Back</a>
             </div>
@@ -21,15 +21,12 @@
             <div class="col-8 mt-3 mx-5">
                 <h3>Report perofrmance ejourney with light house!</h3>
                 <div class="row">
-                    <div class="col-2">
-                        <span class="badge bg-secondary">Staging</span>
-                    </div>
-                    <div class="col-2">
-                        <span class="badge bg-secondary">Student site</span>
+                    <div class="col">
+                        <span class="badge bg-secondary">Staging | Student Site</span>
                     </div>
                 </div>
-                
-                <div class="row ">
+
+                <div class="row">
                     <div class="col mt-2">
                         <table class="table">
                             <thead>
@@ -43,30 +40,78 @@
                             <tbody>
                                 <tr>
                                     <th scope="row">1</th>
-                                    <td><a href="home.html" target="_blank">Home</a></td>
+                                    <td><a href="">Sign Up</a></td>
                                     <td>-</td>
                                     <td>
-                                        <button type="button" class="btn btn-success btn-sm">86%</button>
+                                        <button type="button" class="btn btn-success btn-sm">Already passed in production.</button>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
-                                    <td><a href="account.html" target="_blank">Account</a></td>
+                                    <td><a href="">Login</a></td>
                                     <td>-</td>
                                     <td>
-                                        <button type="button" class="btn btn-success btn-sm">96%</button>
+                                        <button type="button" class="btn btn-success btn-sm">Already passed in production.</button>
                                     </td>
                                 </tr>
                             <tr>
                                 <th scope="row">3</th>
-                                <td><a href="careerpath.html" target="_blank">Career Path</a></td>
+                                <td><a href="home.html" target="_blank">Home page</a></td>
+                                <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">86%</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">4</th>
+                                <td><a href="careerpath.html" target="_blank">Career Planner</a></td>
                                 <td>-</td>
                                 <td>
                                     <button type="button" class="btn btn-success btn-sm">96%</button>
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">4</th>
+                                <th scope="row">5</th>
+                                <td><a href="">Learning planner</a></td>
+                                <td>popUp guide</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
+                                <td><a href="">Learning planner</a></td>
+                                <td>Form page</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">7</th>
+                                <td><a href="courseSelection.html" target="_blank" >Learning planner</a></td>
+                                <td>Course Selection</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">95%</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">8</th>
+                                <td><a href=""></a>Learning planner </a></td>
+                                <td> Result & progress</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">9</th>
+                                <td><a href="marketPlace.html" target="_blank">Market Place</a></td>
+                                <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">83%</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">10</th>
                                 <td><a href="collection.html" target="_blank">Collection</a></td>
                                 <td>-</td>
                                 <td>
@@ -74,19 +119,83 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">5</th>
+                                <th scope="row">11</th>
+                                <td><a href="detailCourse.html" target="_blank">Detail Course</a></td>
+                                <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">83%</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">12</th>
+                                <td><a href="" >Interactive Learning</a></td>
+                                <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">13</th>
+                                <td><a href="historyTrx.html" target="_blank">History transaction</a></td>
+                                <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">81%</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">14</th>
+                                <td><a href="cart.html" target="_blank">Cart</a></td>
+                                <td>-</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">15</th>
                                 <td><a href="institutLearning.html" target="_blank">Institute Learning</a></td>
                                 <td>-</td>
                                 <td>
                                     <button type="button" class="btn btn-success btn-sm">95%</button>
                                 </td>
                             </tr>
-                            <tr></tr>
-                                <th scope="row">6</th>
-                                <td><a href="purchase.html" target="_blank">Transaction</a></td>
+                            <tr>
+                                <th scope="row">16</th>
+                                <td><a href="courseInstitute.html" target="_blank">Institute Learning</a></td>
+                                <td>Course institute</td>
+                                <td>
+                                    <button type="button" class="btn btn-success btn-sm">87%</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">17</th>
+                                <td><a href="">Institute Learning</a></td>
+                                <td>User management</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">18</th>
+                                <td><a href="">Institute Learning</a></td>
+                                <td>Course Report</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">19</th>
+                                <td><a href="">Institute Learning</a></td>
+                                <td>Course Learning (student)</td>
+                                <td>
+                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">20</th>
+                                <td><a href="account.html" target="_blank">Profile page</a></td>
                                 <td>-</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm">98%</button>
+                                    <button type="button" class="btn btn-success btn-sm">96%</button>
                                 </td>
                             </tr>
                             </tbody>
