Update report, institute learning dan cart

--- a/staging/index.html
+++ b/staging/index.html
@@ -80,10 +80,10 @@
                             </tr>
                             <tr>
                                 <th scope="row">6</th>
-                                <td><a href="">Learning planner</a></td>
+                                <td><a href="learningpath.html" target="_blank">Learning planner</a></td>
                                 <td>Form page</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">94%</button>
                                 </td>
                             </tr>
                             <tr>
@@ -96,10 +96,10 @@
                             </tr>
                             <tr>
                                 <th scope="row">8</th>
-                                <td><a href=""></a>Learning planner </a></td>
+                                <td><a href="learningplanner-Progress.html" target="_blank">Learning planner </a></td>
                                 <td> Result & progress</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">93%</button>
                                 </td>
                             </tr>
                             <tr>
@@ -128,10 +128,10 @@
                             </tr>
                             <tr>
                                 <th scope="row">12</th>
-                                <td><a href="" >Interactive Learning</a></td>
+                                <td><a href="interactiveLearning.html" target="_blank">Interactive Learning</a></td>
                                 <td>-</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">86%</button>
                                 </td>
                             </tr>
                             <tr>
@@ -147,7 +147,7 @@
                                 <td><a href="cart.html" target="_blank">Cart</a></td>
                                 <td>-</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">89%</button>
                                 </td>
                             </tr>
                             <tr>
@@ -168,26 +168,26 @@
                             </tr>
                             <tr>
                                 <th scope="row">17</th>
-                                <td><a href="">Institute Learning</a></td>
+                                <td><a href="instituteLearning-UserManagement.html" target="_blank">Institute Learning</a></td>
                                 <td>User management</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">85%</button>
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">18</th>
-                                <td><a href="">Institute Learning</a></td>
-                                <td>Course Report</td>
+                                <td><a href="instituteLearning-ReportStudent.html" target="_blank">Institute Learning</a></td>
+                                <td>Course Report - Admin / owner</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">86%</button>
                                 </td>
                             </tr>
                             <tr>
                                 <th scope="row">19</th>
-                                <td><a href="">Institute Learning</a></td>
-                                <td>Course Learning (student)</td>
+                                <td><a href="instituteLearning-Chapter.html" target="_blank">Institute Learning</a></td>
+                                <td>Course Learning - Student</td>
                                 <td>
-                                    <button type="button" class="btn btn-secondary btn-sm">Not ready to be tested yet</button>
+                                    <button type="button" class="btn btn-success btn-sm">83%</button>
                                 </td>
                             </tr>
                             <tr>
